src/test/enum.rs
use strawberry_fields::strawberry_fields;

#[strawberry_fields(u32)]
enum Dummy {
    First,
    Second,
}
fn main() {}
